syntax = "proto3";

package com.ecommerce.productorder.payment;

option java_package = "com.ecommerce.productorder.payment.grpc";
option java_outer_classname = "PaymentProto";

// Payment service definition
service PaymentService {
  // Process payment
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  
  // Get payment by ID
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  
  // Get payment by order ID
  rpc GetPaymentByOrderId(GetPaymentByOrderIdRequest) returns (GetPaymentByOrderIdResponse);
  
  // Refund payment
  rpc RefundPayment(RefundPaymentRequest) returns (RefundPaymentResponse);
  
  // Cancel payment
  rpc CancelPayment(CancelPaymentRequest) returns (CancelPaymentResponse);
  
  // Get payments by customer ID
  rpc GetPaymentsByCustomerId(GetPaymentsByCustomerIdRequest) returns (GetPaymentsByCustomerIdResponse);
  
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Request messages
message ProcessPaymentRequest {
  int64 order_id = 1;
  int64 customer_id = 2;
  string amount = 3;
  string payment_method = 4;
  string card_number = 5;
  string card_holder_name = 6;
  string expiry_date = 7;
  string cvv = 8;
  string description = 9;
  string customer_email = 10;
  string billing_address = 11;
  string city = 12;
  string state = 13;
  string postal_code = 14;
  string country = 15;
}

message GetPaymentRequest {
  string payment_id = 1;
}

message GetPaymentByOrderIdRequest {
  int64 order_id = 1;
}

message RefundPaymentRequest {
  string payment_id = 1;
  string refund_amount = 2;
}

message CancelPaymentRequest {
  string payment_id = 1;
}

message GetPaymentsByCustomerIdRequest {
  int64 customer_id = 1;
}

message HealthCheckRequest {
  string service = 1;
}

// Response messages
message ProcessPaymentResponse {
  bool success = 1;
  string message = 2;
  PaymentData payment = 3;
}

message GetPaymentResponse {
  bool success = 1;
  string message = 2;
  PaymentData payment = 3;
}

message GetPaymentByOrderIdResponse {
  bool success = 1;
  string message = 2;
  PaymentData payment = 3;
}

message RefundPaymentResponse {
  bool success = 1;
  string message = 2;
  PaymentData payment = 3;
}

message CancelPaymentResponse {
  bool success = 1;
  string message = 2;
  PaymentData payment = 3;
}

message GetPaymentsByCustomerIdResponse {
  bool success = 1;
  string message = 2;
  repeated PaymentData payments = 3;
}

message HealthCheckResponse {
  bool healthy = 1;
  string message = 2;
}

// Data messages
message PaymentData {
  int64 id = 1;
  string payment_id = 2;
  int64 order_id = 3;
  int64 customer_id = 4;
  string amount = 5;
  string status = 6;
  string payment_method = 7;
  string transaction_id = 8;
  string gateway_response = 9;
  string failure_reason = 10;
  string processed_at = 11;
  string created_at = 12;
  string updated_at = 13;
}
